_sass/commons.scss
@import "theme";

.primary-button {
  color: $background-color !important;
  background-color: $brand-color !important;
  padding: 8px 16px;
  box-shadow: inset 0 1px 0 0 hsla(0, 0%, 100%, 0.4);
  position: relative;
  display: inline-block;
  padding: 0.8em;
  border: 1px solid transparent;
  border-radius: $radius;
  background-color: transparent;
  outline: none;
  font-family: inherit;
  font-size: 13px;
  font-weight: normal;
  line-height: 1.15384615;
  text-align: center;
  text-decoration: none !important;
  cursor: pointer;
  user-select: none;
  transition: all 0.25s ease;

  &::after {
    content: "\00bb";
    color: $background-color;
    opacity: 0;
    display: inline-block;
    transform: translate(0px, 0);
    margin-left: -8px;
    transition: all 0.25s ease;
  }

  &:hover {
    background-color: $brand-color-variant !important;
    text-decoration: none;
    &::after {
      opacity: 1;
      margin-left: 0px;
      transform: translate(4px, 0);
    }
  }
}

.mt0 {
  margin-top: 0px;
}

.mt {
  margin-top: 8px;
}

.mt2 {
  margin-top: 16px;
}

.mt3 {
  margin-top: 24px;
}

.mt4 {
  margin-top: 32px;
}

.mb0 {
  margin-bottom: 0px;
}

.mb {
  margin-bottom: 8px;
}

.mb2 {
  margin-bottom: 16px;
}

.mb3 {
  margin-bottom: 24px;
}

.mb4 {
  margin-bottom: 32px;
}

.topic {
  img {
    margin: 2px 0;
    border-radius: $radius;
    transition: transform 0.1s ease;
    &:hover {
      transform: translate(0, -1px);
    }
  }
}

hr {
  border: 0;
  height: 1px;
  background: $grey-color-light;
  margin: 16px 0 16px 0 !important;
  padding: 0 !important;
}

#markdown-toc {
  border: 1px solid $grey-color-light;
  border-radius: $radius;
  padding: 16px 32px;
  margin: 0 0 16px 0;
}

.main-section {
  min-height: 400px;
  display: flex;
  justify-content: start;
  align-items: center;
  margin: -$spacing-unit 0 0 0;
  h1 {
    font-size: 48px;
    line-height: normal;
  }
  p {
    padding: 0;
    margin: 0;
    max-width: 400px;
  }
  b {
    margin: 8px 0 0 0;
    display: block;
  }
}

.dot3 {
  width: 100%;
  text-align: center;
  &::before {
    content: "·ㅤ · ㅤ·";
  }
}

.cv {
  width: 100%;
  min-height: 800px;
  aspect-ratio: 595 / 910;
}

.image-cover,
video {
  margin-bottom: 16px;
  border-radius: $radius;
  width: 100%;
}

.dropdown {
  position: relative;
  display: inline-block;

  .dropdown-label {
    color: $brand-color;
    margin: 0px;
    &:hover {
      color: $text-color;
      text-decoration: underline;
    }
  }

  .dropdown-content {
    display: none;
    position: absolute;
    background-color: $background-color;
    min-width: 160px;
    border: 1px solid $grey-color-light;
    border-radius: $radius;
    z-index: 1;
    overflow: hidden;
    a {
      color: $text-color !important;
      padding: 12px 16px;
      text-decoration: none;
      display: block;
      &:hover {
        background-color: $black-050;
      }
    }
  }

  &:hover .dropdown-content {
    display: block;
  }
}

iframe {
  width: 100%;
  aspect-ratio: 16 /9;
}

.post-tag {
  border: 1px solid $grey-color-light;
  border-radius: 24px;
  padding: 2px 8px;
  font-size: 11px;
  margin-right: 1px;
  margin-left: 1px;
  @media screen and (max-width: $on-laptop) {
    margin-bottom: 4px;
    margin-top: 0px;
  }
}

.inline-flex {
  display: inline-flex;
}

